Update Jackson Dependency to 3.1.x (#411)
Jackson 3.1 shipped last October. There are several breaking changes *in
Jackson* - this PR updates DBOS code to use them.

> Note, while Jackson 3.x has breaking API changes relative to Jackson
2.x, the serialization format has not changed. `JavaSerializerTest` adds
explicit text asserts that were manually executed against main running
Jackson 2.21 to ensure the serialized values do not change between
Jackson 2.x and 3.x

Jackson changes that simplify DBOS:
* No separate jsr310 module. java.time type support built into
tools.jackson.core:jackson-databind
* Jackson parsing methods no longer thow checked exceptions, so no need
for JsonRuntimeException

Other changes
* StringOrListDeserializer works at the token level instead of building
a JSON tree